@@ -31,7 +31,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.1</version>
+      <version>4.11</version>
     </dependency>
     <dependency>
       <groupId>org.apache.pig</groupId>
